tests/paczka1/small_fuzzy/25193972.err
Error in line 6: mnTKTXSNh A561 29,8
Error in line 9: vNA9W A153 67,3
Error in line 10: A561 S760 78,3
